tests/Classes/Error/PropertyRedeclaration.php
<?php
/**
 * The file for the property redeclaration test class
 *
 * @author     Jack Clayton <clayjs0@gmail.com>
 * @copyright  2015 Jack Clayton
 * @license    MIT
 */
namespace Jstewmc\Transient\Tests\Classes\Error;

/**
 * A property redeclaration test class
 *
 * @since  0.1.0
 */
class PropertyRedeclaration extends \Jstewmc\Transient\Entity
{
    protected $foo = 'foo';
}
